// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders snapshot correctly 1`] = `
<div
  className="sc-iOeugr cwWscn"
>
  <div
    className="sc-kDvujY hEHKHG"
  >
    <button
      aria-label="Button"
      className="sc-bcXHqe OJuYq"
      data-testid="button"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      size="large"
    >
      <span
        className="sc-gswNZR eXLoRM"
      >
        Projects
      </span>
    </button>
  </div>
  <div
    className="sc-eJDSGI jVUePp"
  >
    <video
      autoPlay={true}
      className="sc-jfvxQR bzJkDq"
      loop={true}
      muted={true}
      playsInline={true}
      src="/blurred_video.mp4"
    />
    <div
      className="sc-oZIhv bsuQeo"
    >
      <div
        className="sc-hiDMwi hcOhYQ"
      >
        <div
          className="sc-iJnaPW dFTIFI"
        >
          <div>
            <div
              className="sc-idXgbr fZkMoO"
            >
              <img
                className="sc-hHTYSt duBETl"
                src="/images/me.jpg"
              />
              <div
                className="sc-bjfHbI fXoFTy"
              >
                <h1
                  className="sc-bqWxrE jFgBe"
                >
                  Frontend Web Developer
                </h1>
                <h2
                  className="sc-ksBlkl gHLbBE"
                >
                  Hey there! 👋 I'm passionate about crafting seamless user experiences using the power of HTML, CSS, and JavaScript/Typescript. With a knack for creative problem-solving, I specialize in Frontend development. My toolkit includes popular frameworks like React and technologies like TypeScript.
                </h2>
              </div>
            </div>
            <div
              className="sc-kgTSHT fapVhj"
            >
              <span
                className="sc-fnGiBr gTgcKS"
              >
                <div>
                  <span
                    className="sc-hBxehG efYgmC"
                  >
                    Working with the following technologies:
                  </span>
                  <div
                    className="sc-fLcnxK fstMzx"
                  >
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        Typescript
                      </span>
                      <img
                        alt="Typescript"
                        className="sc-dIfARi gqTHQu"
                        src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/typescript-colored.svg"
                      />
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        Javascript
                      </span>
                      <img
                        alt="Javascript"
                        className="sc-dIfARi gqTHQu"
                        src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/javascript-colored.svg"
                      />
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        React
                      </span>
                      <img
                        alt="React"
                        className="sc-dIfARi gqTHQu"
                        src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/react-colored.svg"
                      />
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        Nextjs
                      </span>
                      <img
                        alt="Nextjs"
                        className="sc-dIfARi gqTHQu"
                        src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/nextjs-colored.svg"
                      />
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        React Query
                      </span>
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        React Hook Form
                      </span>
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        React Router
                      </span>
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        Jotai
                      </span>
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        Module-Federation
                      </span>
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        MicroFrontends
                      </span>
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        Component Libraries
                      </span>
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        Storybook
                      </span>
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        GraphQL
                      </span>
                      <img
                        alt="GraphQL"
                        className="sc-dIfARi gqTHQu"
                        src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/graphql-colored.svg"
                      />
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        Webpack
                      </span>
                      <img
                        alt="Webpack"
                        className="sc-dIfARi gqTHQu"
                        src="https://raw.githubusercontent.com/devicons/devicon/d00d0969292a6569d45b06d3f350f463a0107b0d/icons/webpack/webpack-original-wordmark.svg"
                      />
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        Docker
                      </span>
                      <img
                        alt="Docker"
                        className="sc-dIfARi gqTHQu"
                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original-wordmark.svg"
                      />
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        Bash
                      </span>
                      <img
                        alt="Bash"
                        className="sc-dIfARi gqTHQu"
                        src="https://www.vectorlogo.zone/logos/gnu_bash/gnu_bash-icon.svg"
                      />
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        Babel
                      </span>
                      <img
                        alt="Babel"
                        className="sc-dIfARi gqTHQu"
                        src="https://www.vectorlogo.zone/logos/babeljs/babeljs-icon.svg"
                      />
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        GIT
                      </span>
                      <img
                        alt="GIT"
                        className="sc-dIfARi gqTHQu"
                        src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg"
                      />
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        CI/CD
                      </span>
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        Jest
                      </span>
                      <img
                        alt="Jest"
                        className="sc-dIfARi gqTHQu"
                        src="https://www.vectorlogo.zone/logos/jestjsio/jestjsio-icon.svg"
                      />
                    </div>
                    <div
                      className="sc-bBABsx VPmOh"
                    >
                      <span
                        className="sc-fEXmlR dmBgmn"
                      >
                        Styled-Components
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            className="sc-iveFHk csPWnK"
          >
            <div
              className="sc-dkrFOg hmHHOD sc-cwSeag ffPXVK"
            >
              <a
                className="sc-ftTHYK PBCua"
                href="https://www.linkedin.com/in/manuel-correia2209/"
              >
                <div
                  className="sc-hLBbgP"
                >
                  <img
                    className="sc-jSUZER hTCUaC"
                    src="https://hermes.digitalinnovation.one/articles/cover/669b63fe-912d-484c-b313-95a46a8ee25e.png"
                  />
                </div>
                <div
                  className="sc-eDvSVe jEFxeW"
                >
                  <span
                    className="sc-gKPRtg hcEIrj"
                  >
                    LinkedIn
                  </span>
                </div>
              </a>
            </div>
            <div
              className="sc-dkrFOg hmHHOD sc-cwSeag ffPXVK"
            >
              <a
                className="sc-ftTHYK PBCua"
                href="https://github.com/manuelc2209/react-ui"
              >
                <div
                  className="sc-hLBbgP"
                >
                  <img
                    className="sc-jSUZER hTCUaC"
                    src="https://hermes.digitalinnovation.one/articles/cover/7b4fbb1d-f57a-4420-9209-ee976b171bdf.jpg"
                  />
                </div>
                <div
                  className="sc-eDvSVe jEFxeW"
                >
                  <span
                    className="sc-gKPRtg hcEIrj"
                  >
                    Github
                  </span>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div>
  <div
    class="sc-iOeugr cwWscn"
  >
    <div
      class="sc-kDvujY hEHKHG"
    >
      <button
        aria-label="Button"
        class="sc-bcXHqe OJuYq"
        data-testid="button"
      >
        <span
          class="sc-gswNZR eXLoRM"
        >
          Projects
        </span>
      </button>
    </div>
    <div
      class="sc-eJDSGI jVUePp"
    >
      <video
        autoplay=""
        class="sc-jfvxQR bzJkDq"
        loop=""
        playsinline=""
        src="/blurred_video.mp4"
      />
      <div
        class="sc-oZIhv bsuQeo"
      >
        <div
          class="sc-hiDMwi hcOhYQ"
        >
          <div
            class="sc-iJnaPW dFTIFI"
          >
            <div>
              <div
                class="sc-idXgbr fZkMoO"
              >
                <img
                  class="sc-hHTYSt duBETl"
                  src="/images/me.jpg"
                />
                <div
                  class="sc-bjfHbI fXoFTy"
                >
                  <h1
                    class="sc-bqWxrE jFgBe"
                  >
                    Frontend Web Developer
                  </h1>
                  <h2
                    class="sc-ksBlkl gHLbBE"
                  >
                    Hey there! 👋 I'm passionate about crafting seamless user experiences using the power of HTML, CSS, and JavaScript/Typescript. With a knack for creative problem-solving, I specialize in Frontend development. My toolkit includes popular frameworks like React and technologies like TypeScript.
                  </h2>
                </div>
              </div>
              <div
                class="sc-kgTSHT fapVhj"
              >
                <span
                  class="sc-fnGiBr gTgcKS"
                >
                  <div>
                    <span
                      class="sc-hBxehG efYgmC"
                    >
                      Working with the following technologies:
                    </span>
                    <div
                      class="sc-fLcnxK fstMzx"
                    >
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          Typescript
                        </span>
                        <img
                          alt="Typescript"
                          class="sc-dIfARi gqTHQu"
                          src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/typescript-colored.svg"
                        />
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          Javascript
                        </span>
                        <img
                          alt="Javascript"
                          class="sc-dIfARi gqTHQu"
                          src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/javascript-colored.svg"
                        />
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          React
                        </span>
                        <img
                          alt="React"
                          class="sc-dIfARi gqTHQu"
                          src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/react-colored.svg"
                        />
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          Nextjs
                        </span>
                        <img
                          alt="Nextjs"
                          class="sc-dIfARi gqTHQu"
                          src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/nextjs-colored.svg"
                        />
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          React Query
                        </span>
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          React Hook Form
                        </span>
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          React Router
                        </span>
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          Jotai
                        </span>
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          Module-Federation
                        </span>
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          MicroFrontends
                        </span>
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          Component Libraries
                        </span>
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          Storybook
                        </span>
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          GraphQL
                        </span>
                        <img
                          alt="GraphQL"
                          class="sc-dIfARi gqTHQu"
                          src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/graphql-colored.svg"
                        />
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          Webpack
                        </span>
                        <img
                          alt="Webpack"
                          class="sc-dIfARi gqTHQu"
                          src="https://raw.githubusercontent.com/devicons/devicon/d00d0969292a6569d45b06d3f350f463a0107b0d/icons/webpack/webpack-original-wordmark.svg"
                        />
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          Docker
                        </span>
                        <img
                          alt="Docker"
                          class="sc-dIfARi gqTHQu"
                          src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original-wordmark.svg"
                        />
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          Bash
                        </span>
                        <img
                          alt="Bash"
                          class="sc-dIfARi gqTHQu"
                          src="https://www.vectorlogo.zone/logos/gnu_bash/gnu_bash-icon.svg"
                        />
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          Babel
                        </span>
                        <img
                          alt="Babel"
                          class="sc-dIfARi gqTHQu"
                          src="https://www.vectorlogo.zone/logos/babeljs/babeljs-icon.svg"
                        />
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          GIT
                        </span>
                        <img
                          alt="GIT"
                          class="sc-dIfARi gqTHQu"
                          src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg"
                        />
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          CI/CD
                        </span>
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          Jest
                        </span>
                        <img
                          alt="Jest"
                          class="sc-dIfARi gqTHQu"
                          src="https://www.vectorlogo.zone/logos/jestjsio/jestjsio-icon.svg"
                        />
                      </div>
                      <div
                        class="sc-bBABsx VPmOh"
                      >
                        <span
                          class="sc-fEXmlR dmBgmn"
                        >
                          Styled-Components
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="sc-iveFHk csPWnK"
            >
              <div
                class="sc-dkrFOg hmHHOD sc-cwSeag ffPXVK"
              >
                <a
                  class="sc-ftTHYK PBCua"
                  href="https://www.linkedin.com/in/manuel-correia2209/"
                >
                  <div
                    class="sc-hLBbgP"
                  >
                    <img
                      class="sc-jSUZER hTCUaC"
                      src="https://hermes.digitalinnovation.one/articles/cover/669b63fe-912d-484c-b313-95a46a8ee25e.png"
                    />
                  </div>
                  <div
                    class="sc-eDvSVe jEFxeW"
                  >
                    <span
                      class="sc-gKPRtg hcEIrj"
                    >
                      LinkedIn
                    </span>
                  </div>
                </a>
              </div>
              <div
                class="sc-dkrFOg hmHHOD sc-cwSeag ffPXVK"
              >
                <a
                  class="sc-ftTHYK PBCua"
                  href="https://github.com/manuelc2209/react-ui"
                >
                  <div
                    class="sc-hLBbgP"
                  >
                    <img
                      class="sc-jSUZER hTCUaC"
                      src="https://hermes.digitalinnovation.one/articles/cover/7b4fbb1d-f57a-4420-9209-ee976b171bdf.jpg"
                    />
                  </div>
                  <div
                    class="sc-eDvSVe jEFxeW"
                  >
                    <span
                      class="sc-gKPRtg hcEIrj"
                    >
                      Github
                    </span>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
